# g4f-bridge

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  smart_bridge.py
src/bridge/: main.py  models.py  translate.py  utils.py
src/configs/: antigravity.py  claude_code.py  codex.py  cursor.py  opencode.py
tui/: app.tsx  index.tsx  package.json  tsconfig.json  tsup.config.ts
tui/components/: animated-logo.tsx  divider.tsx  footer.tsx  status-badge.tsx  step-indicator.tsx  toast.tsx
tui/lib/: api.ts  bridge-process.ts  config-paths.ts  types.ts
tui/screens/: dashboard.tsx  model-picker.tsx  onboarding.tsx  settings.tsx  welcome.tsx
